--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <meta
       name="description"
       content="Web site created using create-react-app"
-      />
+    />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -29,6 +29,12 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="app-root"></div>
+    <input
+      type="hidden"
+      name="__REQUESTDIGEST"
+      id="__REQUESTDIGEST"
+      value="0x91F6AE89921EF74AC02AE9CFED3A907A06DF368B6251F12BF0AD8245F9536B7F81C4E9B7A9C2F0B3CA2AD84AA6E034D3483473BF1D0EC1FD318AEB0C683D23CD,04 Feb 2020 18:30:18 -0000"
+    />
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
