--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,11 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+    <script type="text/javascript" src="_layouts/15/init.js"></script>
+    <script type="text/javascript" src="_layouts/15/MicrosoftAjax.js"></script>
+    <script type="text/javascript" src="_layouts/15/sp.core.js"></script>
+    <script type="text/javascript" src="_layouts/15/sp.runtime.js"></script>
+    <script type="text/javascript" src="_layouts/15/sp.js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -33,7 +38,7 @@
       type="hidden"
       name="__REQUESTDIGEST"
       id="__REQUESTDIGEST"
-      value="0x91F6AE89921EF74AC02AE9CFED3A907A06DF368B6251F12BF0AD8245F9536B7F81C4E9B7A9C2F0B3CA2AD84AA6E034D3483473BF1D0EC1FD318AEB0C683D23CD,04 Feb 2020 18:30:18 -0000"
+      value="0x52CA7ECD82A5EE2B2138EB219F90A723A25E34DA51DED98A5D58139591C3277F989CF006FB3244B497A97AFD2B9967AB3DD10CD785D1AE33A021166DAFA689B5,18 Feb 2020 18:40:53 -0000"
     />
     <!--
       This HTML file is a template.
