--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,7 @@
 			_spPageContextInfo = {
 				webAbsoluteUrl: 'http://localhost:8081',
 				siteAbsoluteUrl: 'http://localhost:8081',
+				webTitle: 'VDR Harness'
 			}
 		</script>
 		<script
