updated web variable

--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
 		<script type="text/javascript" src="_layouts/15/init.js"></script>
 		<script type="text/javascript">
 			_spPageContextInfo = {
-				webAbsoluteUrl: 'http://localhost:8081',
+				webAbsoluteUrl: 'http://localhost:8081/VDRoom',
 				siteAbsoluteUrl: 'http://localhost:8081',
 				webTitle: 'VDR Harness'
 			}
